change for my name ejeje

--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "displayName": "coffescript Snippets",
     "description": "coffescript Snippets for Visual Studio Code",
     "version": "0.0.1",
-    "author": "Jonathan Rauprich",
+    "author": "Peter Anderson",
     "publisher": "diniremix",
     "license": "MIT",
     "icon": "logo.png",
